Modifing in groups